# internal/httpserver/request/request.go
@@ -8,40 +8,83 @@ import (
 	"github.com/salivare/subscriptions-service/internal/domain/models"
 )
 
-type Request struct {
+type CreateRequest struct {
 	ServiceName string `json:"service_name" validate:"required"`
-	Price       int64  `json:"price" validate:"required,min=0"`
+	Price       *int64 `json:"price" validate:"required,min=0"`
 	UserID      string `json:"user_id" validate:"required,uuid"`
 	StartDate   string `json:"start_date" validate:"required"`
 	EndDate     string `json:"end_date"`
 }
 
-func (r Request) ToModel() (models.Subscription, error) {
-	userID, err := uuid.Parse(r.UserID)
+func (r CreateRequest) ToModel() (models.Subscription, error) {
+	return convert(r.ServiceName, r.Price, r.UserID, r.StartDate, r.EndDate)
+}
+
+type UpdateRequest struct {
+	ServiceName *string `json:"service_name"`
+	Price       *int64  `json:"price" validate:"min=0"`
+	StartDate   *string `json:"start_date"`
+	EndDate     *string `json:"end_date"`
+}
+
+func (r UpdateRequest) ApplyTo(sub *models.Subscription) error {
+	if r.ServiceName != nil {
+		sub.ServiceName = *r.ServiceName
+	}
+
+	if r.Price != nil {
+		sub.Price = r.Price
+	}
+
+	if r.StartDate != nil {
+		t, err := parseMonthYear(*r.StartDate)
+		if err != nil {
+			return fmt.Errorf("invalid start_date: %w", err)
+		}
+		sub.StartDate = t
+	}
+
+	if r.EndDate != nil {
+		if *r.EndDate == "" {
+			sub.EndDate = nil
+		} else {
+			t, err := parseMonthYear(*r.EndDate)
+			if err != nil {
+				return fmt.Errorf("invalid end_date: %w", err)
+			}
+			sub.EndDate = &t
+		}
+	}
+
+	return nil
+}
+
+func convert(service string, price *int64, userID string, start string, end string) (models.Subscription, error) {
+	uid, err := uuid.Parse(userID)
 	if err != nil {
 		return models.Subscription{}, fmt.Errorf("invalid user_id: %w", err)
 	}
 
-	start, err := parseMonthYear(r.StartDate)
+	startDate, err := parseMonthYear(start)
 	if err != nil {
 		return models.Subscription{}, fmt.Errorf("invalid start_date: %w", err)
 	}
 
-	var end *time.Time
-	if r.EndDate != "" {
-		t, err := parseMonthYear(r.EndDate)
+	var endDate *time.Time
+	if end != "" {
+		t, err := parseMonthYear(end)
 		if err != nil {
 			return models.Subscription{}, fmt.Errorf("invalid end_date: %w", err)
 		}
-		end = &t
+		endDate = &t
 	}
 
 	return models.Subscription{
-		ServiceName: r.ServiceName,
-		Price:       r.Price,
-		UserID:      userID,
-		StartDate:   start,
-		EndDate:     end,
+		ServiceName: service,
+		Price:       price,
+		UserID:      uid,
+		StartDate:   startDate,
+		EndDate:     endDate,
 	}, nil
 }
 
